Fixed issue with width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
 
 /*healthbar styling*/
 .barBackground {
-  width: 300px;
+  width: 400px;
   height: 25px;
   background-color: rgb(94, 92, 92);
   position: relative;
@@ -128,7 +128,11 @@
     flex-direction: column;
   }
 
+  .barBackground {
+    width: 80vw;
+  }
   .menu {
+    width: 80vw;
     display: block;
   }
 }
